[tool.poetry]
name = "jarvice-cli"
version = "1.0.0"
description = ""
authors = ["Nimbix <support@nimbix.net>"]
readme = "README.md"
repository = "https://github.com/nimbix/jarvice-cli"
packages = [{include = "jarvice_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
jarviceapi-client = {git = "https://github.com/nimbix/python-jarviceapi"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
